# django-cloudinary-storage

./: .editorconfig  .gitignore  .travis.yml  LICENCE  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  runtests.py  setup.py  test_requirements.txt  tox.ini
cloudinary_storage/: app_settings.py  apps.py  helpers.py  storage.py  validators.py
cloudinary_storage/management/commands/: collectstatic.py  deleteorphanedmedia.py  deleteredundantstatic.py
cloudinary_storage/templatetags/: cloudinary_static.py
tests/: admin.py  models.py  settings.py  test_commands.py  test_helpers.py  test_models.py  test_settings.py  test_storage.py  tests.py  urls.py  views.py
tests/migrations/: 0001_initial.py  0002_testimagemodel.py  0003_testmodelwithoutfile.py  0004_auto_20160806_0654.py  0005_testvideomodel.py  0006_auto_20160807_0428.py
tests/static/tests/css/: font.css  style.css
tests/templates/tests/: index.html
tests/tests/: test_app_settings.py  test_commands.py  test_helpers.py  test_index_page.py  test_models.py  test_storage.py
